src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2_StringErrorContext.class */
public final class ARBTransformFeedback2_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBindTransformFeedback(II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        methods.put("nglDeleteTransformFeedbacks(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        methods.put("glDeleteTransformFeedbacks(Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        methods.put("glDeleteTransformFeedbacks(I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        methods.put("nglGenTransformFeedbacks(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        methods.put("glGenTransformFeedbacks(Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        methods.put("glGenTransformFeedbacks()I", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        methods.put("glIsTransformFeedback(I)Z", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        methods.put("glPauseTransformFeedback()V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        methods.put("glResumeTransformFeedback()V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        methods.put("glDrawTransformFeedback(II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        methods.put("glDeleteTransformFeedbacks([I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        methods.put("glGenTransformFeedbacks([I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransformFeedback2ErrorContext");
        return methods;
    }
}
